--- a/styles/components.css
+++ b/styles/components.css
@@ -6,7 +6,7 @@
 }
 
 .info--block__container{
-    width: 1140px;
+    width: clamp(300px ,90vw, 1140px);
     height: 200px;
     background-color: var(--light);
     border-radius: var(--radius-s);
@@ -52,7 +52,8 @@
 
 .subcsribe {
     margin-top: 150px;
-    width: 1140px;
+    margin-inline: 20px;
+    width: clamp(300px ,90vw, 1140px);
     height: 233px;
     border-radius: var(--radius-s);
     display: flex;
@@ -64,8 +65,6 @@
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     background-color: var(--light);
     z-index: 2;
-
-
 }
 .subcsribe__text-block {
   display: flex;
