--- a/styles/footer.css
+++ b/styles/footer.css
@@ -71,3 +71,26 @@
     text-decoration: none;
 
 }
+
+@media (max-width:982px) {
+    .footer{
+        height: auto;
+        width: 100%;
+        padding: 10px;
+    }
+    .footer-container{
+        width: 90vw;
+    }
+
+}
+
+@media (max-width:743px) {
+    .footer-container{
+        width: 90vw;
+        grid-template-columns: repeat(3, 1fr);
+    }
+    .grid-1{
+        grid-row: 3/3;
+        margin-top: 30px;
+    }
+}
