--- a/styles/hero.css
+++ b/styles/hero.css
@@ -7,7 +7,9 @@
     height: 382px;
 
 }
-
+/* .hero__container{
+    width: 80vw;
+} */
 .hero__content{
     display: flex;
     flex-direction: column;
@@ -34,4 +36,54 @@
 .hero__img{
     width: 611px;
     object-fit: cover;
+}
+
+@media (max-width: 1250px) {
+
+    .hero{
+        margin: 60px  50px;
+    }
+}
+
+@media (max-width:982px) {
+    .hero{
+        display: block;
+        margin: 60px  150px;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+    }
+    .hero__content{
+        position: absolute;
+        z-index: 1;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        row-gap: 20px;
+        align-content: space-between;
+    }
+    
+    .hero__title{
+        font-size: var(--font-xl);
+        font-weight: 500;
+        line-height: 70px;
+    }
+    
+    .hero__desc{
+        font-size: var(--font-s);
+        font-weight: 500;
+        line-height: 30px;
+        color: var(--bage-color);
+    }
+    .hero__button{
+        margin-top: 40px;
+    }
+    
+    .hero__img{
+        z-index: -1;
+        position: absolute;
+        width: 611px;
+        object-fit: cover;
+        opacity: 0.5;
+    }
 }
