--- a/styles/covarage.css
+++ b/styles/covarage.css
@@ -20,11 +20,28 @@
     line-height: 30px;
     max-width: 555px;
     text-align: center;
+    padding: 20px;
 }
 
 .covarage__img{
-    margin-top:100px ;
+    margin-top:100px;
     width: 70vw;
     height: 60vh;
     object-fit: contain;
+}
+
+@media (max-width:982px) {
+    .covarage__img{
+        margin-top:0px;
+    }
+   
+}
+
+@media (max-width :650px) {
+    .covarage__img{
+        margin-top:0px ;
+        width: 95vw;
+        height: auto;
+        object-fit: contain;
+    }
 }
