--- a/styles/customers.css
+++ b/styles/customers.css
@@ -4,11 +4,12 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
+    overflow-x: hidden;
+    z-index: 10;
 }
 
 .customers__logo {
-    width: 1060px;
+    max-width: 1060px;
     height: 300px;
     display: flex;
     flex-direction: row;
@@ -21,13 +22,17 @@
     object-fit: contain;
 }
 
-
+.customers__logo-amazon{
+    width: 277px;
+    height:200px ;
+}
 .customer__title {
     max-width: 447px;
     font-size: var(--font-x);
     font-weight: 500;
     line-height: 50px;
     text-align: center;
+    padding: 20px;
 
 
 }
@@ -40,6 +45,7 @@
     line-height: 30px;
     text-align: center;
     color: var(--bage-color);
+    padding: 10px;
 }
 
 
@@ -56,7 +62,7 @@
     display: flex;
     flex-direction: row;
     column-gap: 20px;
-    overflow-x: hidden;
+    overflow: scroll;
 }
 
 
@@ -125,6 +131,7 @@
     font-weight: 400;
     line-height: 30px;
     text-align: left;
+    overflow: scroll;
 }
 
 .customer__card__actions{
@@ -166,4 +173,89 @@
         }
     }
 
+}
+
+
+@media (max-width:982px) {
+    .customers__logo {
+        width: 95vw;
+        height: 150px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .customer__logo-logo{
+        width: 90px;
+        height: 40px;
+        object-fit: contain;
+    }
+    .customers__logo-amazon{
+        width: 120px;
+        height: 90px;
+        object-fit: fill;
+    }
+    .customer__card {
+        width: 300px;
+        height: 200px;
+        padding: 20px;
+        row-gap: 14px;
+    }
+    .customer__card__actions{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+    }
+
+
+}
+
+@media (max-width:650px) {
+    .customer__card__actions{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        column-gap: 40px;
+    }
+    .customer__card--dots{
+        display: flex;
+        flex-direction: row;
+        column-gap: 10px;
+    }
+    .customer__card--dots svg{
+        width: 30px;
+        height: 10px;
+    }
+    .circle{
+        height: 10px;
+        width: 10px;
+        background-color: #DDE0E4;
+        border-radius: 50%;
+    }
+    .customer__card--buttons{
+        margin-right: 0px ;
+    }
+    
+    .customer__card-btn{
+        width: 40px;
+        height: 40px;
+        border: none;
+    
+    }
+
+}
+
+@media (max-width: 490px) {
+    .customer__logo-logo{
+        width: 50px;
+        height: 40px;
+        object-fit: contain;
+    }
+    .customers__logo-amazon{
+        width: 90px;
+        height: 90px;
+        object-fit: fill;
+    }
 }
