--- a/styles/hero.css
+++ b/styles/hero.css
@@ -7,9 +7,7 @@
     height: 382px;
 
 }
-/* .hero__container{
-    width: 80vw;
-} */
+
 .hero__content{
     display: flex;
     flex-direction: column;
@@ -48,7 +46,7 @@
 @media (max-width:982px) {
     .hero{
         display: block;
-        margin: 60px  150px;
+        margin: 60px  20px;
         justify-content: center;
         align-items: center;
         position: relative;
@@ -67,6 +65,7 @@
         font-size: var(--font-xl);
         font-weight: 500;
         line-height: 70px;
+        padding: 20px;
     }
     
     .hero__desc{
@@ -74,6 +73,7 @@
         font-weight: 500;
         line-height: 30px;
         color: var(--bage-color);
+        padding: 20px;
     }
     .hero__button{
         margin-top: 40px;
@@ -87,3 +87,35 @@
         opacity: 0.5;
     }
 }
+
+@media (max-width:650px ) {
+    .hero{
+        display: block;
+        position: relative;
+        margin: 20px;
+    }
+    .hero__img{
+        position: absolute;
+        object-fit: cover;
+        opacity: 0.5;
+        width: 80vw;
+    }
+    .hero__content{
+        z-index: 1;
+        row-gap: 20px;
+    }
+
+    .hero__title{
+        line-height: 40px;
+        padding: 5px;
+    }
+    
+    .hero__desc{
+        line-height: 30px;
+        padding: 5px;
+    }
+
+    
+
+}
+
