--- a/styles/plan.css
+++ b/styles/plan.css
@@ -14,6 +14,7 @@
 }
 .plan__desc {
     font-size: var(--font-s);
+    padding: 20px;
     font-weight: 400;
     line-height: 30px;
     text-align: center;
@@ -24,7 +25,9 @@
     margin-top: 60px;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-evenly;
+    gap: 20px;
 }
 .card__elem {
     position: relative;
@@ -45,8 +48,6 @@
     font-weight: 500;
     line-height: 30px;
     text-align: center;
-    
-
 }
 .card__elem__list {
     margin-top: 20px;
@@ -55,14 +56,15 @@
     align-items: start;
     row-gap: 20px;
 }
-.card__plan__list--elem {
+.card__list--elem {
     font-size: 14px;
     font-weight: 400;
     line-height: 30px;
     text-align: left;
     color: var(--bage-color);
-
 }
+
+
 .card__price {
     bottom: 90px;
     position: absolute;
@@ -101,4 +103,65 @@
         color: var(--light);
     }
    
+}
+
+@media (max-width: 982px) {
+    .plan{
+        padding: 10px;
+    }
+
+    .card__elem {
+        position: relative;
+        width:250px ;
+        height: 450px;
+        border: 2px solid #DDDDDD;
+        border-radius: var(--radius-s);
+        display: flex;
+        background-color: var(--light);
+        flex-direction: column;
+        align-items: center;
+        box-sizing: border-box;
+        padding: 10px 0;
+    }
+    .card__elem img{
+        width: 100px;
+        height: 100px;
+    }
+    .card__elem__name {
+        margin-top: 20px;
+        font-size: var(--font-s);
+        font-weight: 500;
+    }
+    .card__elem__list {
+        margin-top: 10px;
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+        row-gap: 0px;
+    }
+
+    .card__list--elem{
+        font-size: 12px;
+        font-weight: 400;
+    }
+    .card__price {
+        bottom: 60px;
+        position: absolute;
+        font-size: 18px;
+        font-weight: 500;
+        line-height: 30px;
+        text-align: center;
+    }
+    .card__button{
+        bottom: 10px;
+        width: 150px;
+        height: 35px;
+        font-size: 14px;
+        font-weight: 500;
+    }
+
+
+}
+@media (max-width:650px) {
+
 }
