напортачил с футером Добавли alight-items center и мой футер леис улетел      === исправил ====

--- a/index.css
+++ b/index.css
@@ -85,6 +85,10 @@ body{
     overflow-x: hidden;
     display: flex;
     flex-direction: column;
+    &::selection{
+        background-color: chocolate;
+    }
+    
 }
 
 
