--- a/styles/reset.css
+++ b/styles/reset.css
@@ -330,12 +330,12 @@ textarea {
 
 
 ::-moz-selection {
-    background: #b3d4fc;
+    background: #ffbf00;
     text-shadow: none;
 }
 
 ::selection {
-    background: #b3d4fc;
+    background: #ffbf00;
     text-shadow: none;
 }
 
