--- a/styles/header.css
+++ b/styles/header.css
@@ -75,10 +75,6 @@
 
 .burger{
     display: none;
-
-}
-
-.burger.open{
     width: 40px;
     height: 40px;
     background-color: transparent;
@@ -86,14 +82,21 @@
     align-items: center;
     padding: 5px;
 }
+
 .burger span{
     position: absolute;
     width: 40px;
     height: 2px;
-    background-color: var(--light);
+    background-color: var(--accent-color);
     will-change: transition;
     transition: transform 300ms;
 }
+
+.burger.open span{
+    background-color: var(--light);
+
+}
+
 
 .burger.open span:nth-child(1){
     transform: rotate(45deg);
@@ -107,11 +110,11 @@
 }
 
 .burger span:nth-child(1){
-    transform: translateY(15px);
+    transform: translateY(12px);
 }
 
 .burger span:nth-child(3){
-    transform: translateY(-15px);
+    transform: translateY(-12px);
 }
 
 
@@ -176,9 +179,15 @@
     }
     .burger{
         display: flex;
+        position: fixed;
+        top: 60px;
+        right: 100px;
+        background-color: transparent;
+    }
+    .burger.open{
         position: absolute;
-        top: 20px;
-        left: 250px;
+        top: 90px;
+
     }
 }
 
@@ -187,10 +196,12 @@
         margin: 30px 10px;
     }
 
-  
     .burger{
-        top: 20px;
-        left: 200px;
+        top: 30px;
+    }
+    .burger.open{
+        top: 40px;
+        right: 50px;
     }
 }
 
@@ -209,11 +220,15 @@
         width: 200px;
         padding: 10px;
     }
+    .burger.open{
+        top: 40px;
+        right: 10px;
+    }
     
     .burger{
-        width: 40px;
-        height: 40px;
-        left: 150px;
+        width: 30px;
+        height: 30px;
+        right: 20px;
     }
     .burger span{
         width: 30px;
