--- a/styles/header.css
+++ b/styles/header.css
@@ -1,5 +1,7 @@
 .header{
     margin: 60px 150px;
+    width: 100vw;
+    overflow: hidden;
 }
 .header__container{
     display: flex;
@@ -186,7 +188,8 @@
     }
     .burger.open{
         position: absolute;
-        top: 90px;
+        top: 80px;
+        right: 10px;
 
     }
 }
