--- a/styles/header.css
+++ b/styles/header.css
@@ -1,13 +1,16 @@
 .header{
-    margin: 60px 150px;
-    width: 100vw;
-    overflow: hidden;
+    margin: 60px 0px;
+    display: flex;
+    justify-content: center;
 }
+
+
 .header__container{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    column-gap: 40px;
 }
 .logo{
     width: 200px;
@@ -26,214 +29,149 @@
 .bold{
     font-weight: 700;
 }
-.header--content{
-    display: flex;
-    flex-direction: row;
-    width: 800px;
-    justify-content: space-between;
-    align-items: center;
-}
 
 .nav{
     display: flex;
     flex-direction: row;
-    align-items: center;
-    margin-left: 40px;
     justify-content: space-between;
-    width: 400px;
+    align-items: center;
 }
-
-.nav--text {
-    font-size: var(--font-s);
-    font-weight: 400;
-    line-height: 18.96px;
-    text-align: left;
-    text-decoration: none;
-    color: var(--bage-color);
-}
-
-.header__buttons{
+.nav__list{
     display: flex;
     flex-direction: row;
-    column-gap: 20px;
+    margin-left: 20px;
+    column-gap: 60px;
 }
 
-.header__button-signIn{
+.nav__list li a{
     font-size: var(--font-s);
-    font-weight: 500;
+    font-weight: 400;
     line-height: 18px;
-    text-align: center;
-    background-color: var(--light);
-}
-.header__button-signUp{
-    font-size: var(--font-s);
-    font-weight: 700;
-    line-height: 18px;
-    text-align: center;
-    background-color: var(--light);
-    color: var(--accent-color);
+    text-align: left;
+    color: var(--bage-color);
+    text-decoration: none;
 }
 
+.auth--buttons{ 
+    margin-left: 50px;
+    display: flex;
+    flex-direction: row;
+}
 
 .burger{
     display: none;
     width: 40px;
-    height: 40px;
+    height: 50px;
+    position: relative;
     background-color: transparent;
     border: none;
-    align-items: center;
-    padding: 5px;
 }
-
-.burger span{
+.burger__line:nth-child(1){
+    transform: translateY(-15px);
+}
+.burger__line:nth-child(3){
+    transform: translateY(15px);
+}
+.burger__line{
     position: absolute;
-    width: 40px;
+    width: 100%;
     height: 2px;
     background-color: var(--accent-color);
-    will-change: transition;
-    transition: transform 300ms;
+    transition: transform .3s ease-in, opacity .3s ease-in;
 }
 
-.burger.open span{
-    background-color: var(--light);
-
-}
-
-
-.burger.open span:nth-child(1){
-    transform: rotate(45deg);
-}
-.burger.open span:nth-child(2){
-    background-color: transparent;
-    display: none;
-}
-.burger.open span:nth-child(3){
-    transform: rotate(-45deg);
-}
-
-.burger span:nth-child(1){
-    transform: translateY(12px);
-}
-
-.burger span:nth-child(3){
-    transform: translateY(-12px);
-}
-
-
-@media (max-width: 1250px) {
-    .header{
-        margin: 60px 50px;
+.burger.open{
+    & .burger__line:nth-child(1){
+        transform: rotate(45deg);
     }
-}
-
-@media (max-width:982px) {
-    .header__container{
-        align-items: start;
+    & .burger__line:nth-child(3){
+        transform: rotate(-45deg);
     }
-
-    .header--content{
-        background-color: var(--accent-color);
-        position: relative;
-        display: flex;
-        flex-direction: column;
-        place-items: start;
-        width: 300px;
-        padding: 20px;
-        border-radius: var(--radius-s);
-        box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    & .burger__line:nth-child(2){
         opacity: 0;
-        transition: transform 300ms, opacity 100ms;
-        transform: translateX(400px);
     }
-    .header--content.open{
-        transform: translateX(0);
-        opacity: 1;
+}
+
+
+@media (max-width: 1090px) {
+    .header{
+        margin: 40px 0;
+    }
+
+    .header__container{
+        width: 90vw;
+    }
+
+    .burger{
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
     .nav{
-        display: flex;
-        flex-direction: column;
-        align-items: start;
-        margin-left: 40px;
-        row-gap: 20px;
-        width: fit-content;
-        padding-bottom: 20px;
-    }
-    .nav--text{
-        font-size: 20px;
-        font-weight: 700;
-        display: block;
-        color: var(--light);
-    } 
-    .header__buttons{
-        display: flex;
+        box-sizing: border-box;
+        position: fixed;
+        top: 100px;
+        right: 0;
         flex-direction: column;
         align-items: center;
-        row-gap: 20px;
-    
+        width: 90vw;
+        background-color: var(--accent-color);
+        padding: 20px;
+        border-radius: var(--radius-s);
+        z-index: 100;
+        transform: translateY(-200%);
+        right: 5vw;
+        transition: transform 0.3s ease-in-out;
     }
-    .header__button-signIn{
+    .nav__list{
+        flex-direction: column;
+        align-items: center;
+        margin-left: 0;
+        width: 100%;
+        margin-bottom: 20px ;
+    }
+    .nav__list li {
+        margin-bottom: 20px;
+        width: 100%;
+    }
+    .nav__list li a{
+        display: inline-block;
+        width: 100%;
         font-size: 20px;
-        font-weight: 700;
-        line-height: 18px;
-        text-align: center;
         color: var(--light);
-        background-color: transparent;
+        text-align: center;
     }
-    .burger{
-        display: flex;
-        position: fixed;
-        top: 60px;
-        right: 100px;
-        background-color: transparent;
+    .auth--buttons{
+        align-items: start;
+        flex-direction: column;
+        margin: 0;
     }
-    .burger.open{
-        position: absolute;
-        top: 80px;
-        right: 10px;
+    .auth--buttons button{
+        display: inline-block;
+        width: 100%;
+        height: auto;
+        border: none;
+        text-align: left;
+        color: var(--light);
+        margin-bottom: 20px;
+        font-size: 22px;
+    }
 
+    .nav.open{
+        transform: translateY(0%);
+        opacity: 1;
     }
+
 }
 
-@media (max-width:650px ) {
-    .header{
-        margin: 30px 10px;
-    }
-
+@media (max-width: 560px) {
     .burger{
-        top: 30px;
+        width: 35px;
     }
-    .burger.open{
-        top: 40px;
-        right: 50px;
+    .burger__line:nth-child(1){
+        transform: translateY(-12px);
     }
-}
-
-@media (max-width:490px) {
-    .logo{
-        width: 120px;
-    }
-    .logo__text{
-        font-size: 16px;
-    }
-    .nav--text{
-        font-size: 14px;
-        font-weight: 500;
-    } 
-    .header--content{
-        width: 200px;
-        padding: 10px;
-    }
-    .burger.open{
-        top: 40px;
-        right: 10px;
-    }
-    
-    .burger{
-        width: 30px;
-        height: 30px;
-        right: 20px;
-    }
-    .burger span{
-        width: 30px;
+    .burger__line:nth-child(3){
+        transform: translateY(12px);
     }
 }
