--- a/styles/footer.css
+++ b/styles/footer.css
@@ -42,7 +42,8 @@
     width: 33px;
     height: 33px;
     border-radius: 50%;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    cursor: pointer;
 
 }
 
@@ -62,8 +63,8 @@
     line-height: 30px;
     text-align: left;
     color: black;
-
 }
+
 
 .footer__list-text li a{
     font-size: var(--font-s);
@@ -72,7 +73,10 @@
     line-height: 30px;
     text-align: left;
     text-decoration: none;
-
+    transition: color 300ms ease;
+    &:hover{
+        text-decoration: underline;
+    }
 }
 
 @media (max-width:982px) {
