--- a/styles/header.css
+++ b/styles/header.css
@@ -17,6 +17,9 @@
     display: flex;
     align-items: center;
     column-gap: 10px;
+    cursor: pointer;
+    text-decoration: none;
+    color: black;
 }
 
 .logo__text{
@@ -50,6 +53,10 @@
     text-align: left;
     color: var(--bage-color);
     text-decoration: none;
+    transition: color 0.2s ease-in-out;
+    &:hover{
+        color: rgb(0, 0, 0);
+    }
 }
 
 .auth--buttons{ 
